fix: fix exit prompt overlap with GameOverScene and LeveUpScene

--- a/src/main/resources/style/game_over_scene_style.css
+++ b/src/main/resources/style/game_over_scene_style.css
@@ -1,4 +1,4 @@
-.root {
+.elements {
     -fx-background-color: radial-gradient(center 50% 50%, radius 70%, #f6a800, #b26600);
     -fx-alignment: CENTER;
     -fx-spacing: 20;
