--- a/src/main/resources/style/level_up_scene_style.css
+++ b/src/main/resources/style/level_up_scene_style.css
@@ -1,4 +1,4 @@
-.root {
+.elements {
     -fx-background-color: radial-gradient(center 50% 50%, radius 70%, #88d24c, #3f8d1d);
     -fx-alignment: CENTER;
     -fx-spacing: 20;
